--- a/main/LewaSecurity2.apk/res/values-cs/strings.xml
+++ b/main/LewaSecurity2.apk/res/values-cs/strings.xml
@@ -1,53 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <string name="app_name">Zabezpečení</string>
-    <string name="main_page">Hlavní</string>
-    <string name="details">Podrobnosti</string>
-    <string name="app_virus_difense">Virová ochrana</string>
-    <string name="app_intercept">Zachytit</string>
-    <string name="app_clearance">Čistý systém</string>
-    <string name="app_auto_start">Auto-start ovládání</string>
-    <string name="app_notification_manager">Správa oznámení</string>
-    <string name="app_antitheft">Proti krádeži</string>
-    <string name="app_perm_manager">Správa oprávnění</string>
-    <string name="intercept_details">Volejte: %1$s zpráva: %2$s</string>
-    <string name="clearance_details">%1$s Použito %2$s</string>
-    <string name="clearance_checking">skenování odpadových souborů</string>
-    <string name="auto_start_details">%1$s aplikací musí být uzavřeno</string>
-    <string name="auto_start_check_info">%1$s samospouštěných položek musí být uzavřeno</string>
-    <string name="auto_start_checing">Kontrola automatické spuštění</string>
-    <string name="perm_manager_details">%1$s aplikace mají citlivé oprávnění</string>
-    <string name="notification_manager_open">Rušení Cloud je otevřeno</string>
-    <string name="notification_manager_close">Rušení Cloud je zavřeno</string>
-    <string name="notification_black_number">%1$d aplikací byl odepřeno</string>
-    <string name="antitheft_close">Funkce Proti krádeži je uzavřena, prosím, pro větší bezpečnost ji otevřete</string>
-    <string name="antitheft_open">Funkce Proti krádeži je otevřena</string>
-    <string name="gap_notice">Poslední doba skenování: před %s</string>
-    <string name="virus_details">Nalezeno %1$d virů</string>
-    <string name="virus_has_been_deleted">%1$d virů bylo vymazáno</string>
-    <string name="virus_has_been_scanned">Virové prohledávání bylo dokončeno</string>
-    <string name="virus_checking">skenování virů...\u0085</string>
-    <string name="virus_optimizing_progress">skenování %s</string>
-    <string name="first_use">Váš telefon nebyl nikdy kontrolován</string>
-    <string name="scan_just_now">Právě skenován</string>
-    <string name="days">dny</string>
-    <string name="hours">hodiny</string>
-    <string name="minutes">minuty</string>
-    <string name="state_optimizing">Optimalizace\u0085</string>
-    <string name="state_detecting">Detekce\u0085</string>
-    <string name="goto_details">Zobrazit podrobnosti</string>
-    <string name="clearance_calculate_state">detekce %s</string>
-    <string name="oneclick_optimize">Optimalizovat jedním dotykem</string>
-    <string name="clearance_garbage_size">%1$s smetí cloudu bude vyčištěno</string>
-    <string name="clearance_garbage_cleared">%1$s smetí cloudu bude vyčištěno</string>
-    <string name="dialog_title">Oznámení Centra zabezpečení</string>
-    <string name="dialog_message_check">Systém kontroluje váš telefon, jste si jisti, že chcete ukončit Centrum zabezpečení?</string>
-    <string name="dialog_message_optimize">Systém kontroluje váš telefon, jste si jisti, že chcete ukončit Centrum zabezpečení?</string>
-    <string name="dialog_finish">Dokončit okamžitě</string>
-    <string name="dialog_continue_scan">Pokračovat v prohledávání</string>
-    <string name="dialog_continue_optimize">Pokračovat v optimalizaci</string>
-    <string name="optimized_complete_hint">Optimalizace dokončeny</string>
-    <string name="complte_hint_safe">Detekce kompletní, telefon bezpečný</string>
-    <string name="complte_hint_risk">Detekce kompletní, prosím optimalizujte</string>
-    <string name="complte_hint_danger">Detekce kompletní, prosím optimalizujte!</string>
+<!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
+<string name="app_name">Centrum zabezpečení</string>
+<string name="main_page">Domů</string>
+<string name="details">Detaily</string>
+<string name="app_virus_difense">Antivirová ochrana</string>
+<string name="app_intercept">Kontrola</string>
+<string name="app_clearance">Vyčistění systému</string>
+<string name="app_auto_start">Automatické spouštění</string>
+<string name="app_notification_manager">Nastavení oznámení</string>
+<string name="app_antitheft">Ochrana proti krádeži</string>
+<string name="app_perm_manager">Nastavení práv</string>
+<string name="intercept_details">Volání: %1$s, Zprávy: %2$s</string>
+<string name="clearance_details">%1$s: využito %2$s</string>
+<string name="clearance_checking">Kontrola odkládacího souboru</string>
+<string name="auto_start_details">Aplikace které by měly být ukončeny: %1$s</string>
+<string name="auto_start_check_info">Auto. spouštěné apli. které by měly být ukončeny: %1$s</string>
+<string name="auto_start_checing">Kontroluji automaticky spouštěné</string>
+<string name="perm_manager_details">Aplikace které mají citlivá oprávnění: %1$s</string>
+<string name="notification_manager_open">Přístup do Cloudu je otevřen</string>
+<string name="notification_manager_close">Přístup do cloudu je uzavřen</string>
+<string name="notification_black_number">Aplikace které byly zablokovány: %1$d</string>
+<string name="antitheft_close">Ochrana proti krádeži je vypnutá.</string>
+<string name="antitheft_open">Ochrana proti krádeži je zapnutá.</string>
+<string name="gap_notice">Poslední kontrola před: %s</string>
+<string name="virus_details">Nalezeno virů: %1$d</string>
+<string name="virus_has_been_deleted">Odstraněno virů: %1$d</string>
+<string name="virus_has_been_scanned">Kontrola dokončena</string>
+<string name="virus_checking">Kontroluji ...</string>
+<string name="virus_optimizing_progress">prohledávám %s</string>
+<string name="first_use">Nikdy nebylo kontrolováno</string>
+<string name="scan_just_now">Právě zkontrolováno</string>
+<string name="days">d</string>
+<string name="hours">h</string>
+<string name="minutes">m</string>
+<string name="state_optimizing">Optimalizuji ...</string>
+<string name="state_detecting">Detekuji ...</string>
+<string name="goto_details">Detaily</string>
+<string name="clearance_calculate_state">detekuji %s</string>
+<string name="oneclick_optimize">Celková optimalizace</string>
+<string name="clearance_garbage_size">Nepotřebných souborů vyčištěno z cloudu: %1$s</string>
+<string name="clearance_garbage_cleared">Nepotřebných souborů vyčištěno z cloudu: %1$s</string>
+<string name="dialog_title">Zpráva centra zabezpečení</string>
+<string name="dialog_message_check">Probíhá kontrola, skutečně chcete zavřít?</string>
+<string name="dialog_message_optimize">Probíhá kontrola, skutečně chcete zavřít?</string>
+<string name="dialog_finish">Ihned ukončit</string>
+<string name="dialog_continue_scan">Pokračovat v prohledávání</string>
+<string name="dialog_continue_optimize">Pokračovat v optimalizaci</string>
+<string name="optimized_complete_hint">Optimalizace je hotová</string>
+<string name="complte_hint_safe">Kontrola dokončena, problémy nenalezeny.</string>
+<string name="complte_hint_risk">Kontrola dokončena, doporučujeme optimalizovat.</string>
+<string name="complte_hint_danger">Kontrola dokončena, je nutné provést optimalizaci!</string>
 </resources>
