--- a/main/lewa-res.apk/res/values-cs/strings.xml
+++ b/main/lewa-res.apk/res/values-cs/strings.xml
@@ -1,40 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
-<string name="selectNone">Zrušit</string>
-<string name="config_longPressOnMenuAction">android.intent.action.ASSIST</string>
-<string name="reboot_system">Restartovat telefon</string>
-<string name="global_action_screenshot">Snímek obrazovky</string>
-<string name="global_action_toggle_silent_mode">Tichý režim</string>
-<string name="global_action_screenshot_status">Pro snímek obrazovky stiskněte najednou tlačítka Power a Volume Down</string>
-<string name="reboot_reboot">Restartovat</string>
-<string name="reboot_recovery">Recovery</string>
-<string name="reboot_bootloader">Bootloader</string>
-<string name="reboot_bootmenu">Bootmenu</string>
-<string name="reboot_fastboot">Fastboot</string>
-<string name="reboot_download">Stáhnout</string>
-<string name="reboot_progress">Restartuji…</string>
-<string name="reboot_confirm">Telefon bude restartován.</string>
-<string name="global_action_reboot">Restartovat</string>
-<string name="lockscreen_discharging">Baterie (%d%%)</string>
-<string name="progress_scanning">Kontroluji</string>
-<string name="phone_goggles_problem_count">Problém #%1$d:</string>
-<string name="phone_goggles_description">Vyřešit následující matematický příklad %1$d za méně než %2$d vteřin pro uskutečnění komunikace.</string>
-<string name="permlab_revokePermissions">Umožňuje prohlížet a upravovat odebraná oprávnění. Není určeno pro běžné aplikace.</string>
-<string name="permdesc_revokePermissions">Umožňuje číst a zapisovat odebraná oprávnění. Není určeno pro běžně aplikace.</string>
-<string name="app_killed_message">Aplikace ukončená</string>
-<string name="back_killed_message">Ukončeno</string>
-<string name="lock_screen_miss_call">%1$d zmeškané volání</string>
-<string name="lock_screen_new_msg">%1$d nové zprávy</string>
-<string name="lock_screen_miss_calls">Zmeškaná volání: %1$d</string>
-<string name="lock_screen_new_msgs">Nové zprávy: %1$d</string>
-<string name="lock_screen_drag_down">Tažením dolů odemknout</string>
-<string name="lock_screen_drag_here">Tažením sem odemknout</string>
-<string name="lock_screen_dismiss">Zamítnout</string>
-<string name="lock_screen_snooze">Podřimovat</string>
-<string name="lock_screen_pm">odp.</string>
-<string name="lock_screen_am">dop.</string>
-<string name="fixed_line">Pevná linka</string>
-<string name="ringtone_custom">Vlastní...</string>
-<string name="ringtone_silent_summary">Tichý</string>
-<string name="data_usage_warning_body">Pozor, jen %s zbývá do konce vašeho datového balíčku.</string>
+<resources>
+    <string name="selectNone">Zrušit</string>
+    <string name="title_actionbar_selected_items">%s vybráno</string>
+    <string name="config_deviceKeyHandlerLib" />
+    <string name="config_deviceKeyHandlerClass" />
+    <string name="config_longPressOnMenuAction">android.intent.action.ASSIST</string>
+    <string name="the_spring_festival">春节</string>
+    <string name="lantern_festival">元宵节</string>
+    <string name="the_dragon_boat_festival">端午节</string>
+    <string name="double_seventh_day">七夕</string>
+    <string name="the_mid_autumn_festival">中秋节</string>
+    <string name="the_double_ninth_festival">重阳节</string>
+    <string name="the_laba_rice_porridge_festival">腊八</string>
+    <string name="new_years_day">元旦</string>
+    <string name="valentines_day">情人节</string>
+    <string name="international_womens_day">妇女节</string>
+    <string name="arbor_day">植树节</string>
+    <string name="fools_day">愚人节</string>
+    <string name="labour_day">劳动节</string>
+    <string name="chinese_youth_day">青年节</string>
+    <string name="childrens_day">儿童节</string>
+    <string name="partys_day">建党节</string>
+    <string name="the_armys_day">建军节</string>
+    <string name="teachers_day">教师节</string>
+    <string name="national_day">国庆节</string>
+    <string name="christmas_day">圣诞节</string>
+    <string name="national_father_day">國父誕辰</string>
+    <string name="slight_cold">小寒</string>
+    <string name="great_cold">大寒</string>
+    <string name="spring_begins">立春</string>
+    <string name="the_rains">雨水</string>
+    <string name="insects_awaken">惊蛰</string>
+    <string name="vernal_equinox">春分</string>
+    <string name="clear_and_bright">清明</string>
+    <string name="grain_rain">谷雨</string>
+    <string name="summer_begins">立夏</string>
+    <string name="grain_buds">小满</string>
+    <string name="grain_in_ear">芒种</string>
+    <string name="summer_solstice">夏至</string>
+    <string name="slight_heat">小暑</string>
+    <string name="great_heat">大暑</string>
+    <string name="autumn_begins">立秋</string>
+    <string name="stopping_the_heat">处暑</string>
+    <string name="white_dews">白露</string>
+    <string name="autumn_equinox">秋分</string>
+    <string name="cold_dews">寒露</string>
+    <string name="hoar_frost_falls">霜降</string>
+    <string name="winter_begins">立冬</string>
+    <string name="light_snow">小雪</string>
+    <string name="heavy_snow">大雪</string>
+    <string name="winter_solstice">冬至</string>
+    <string name="lunar_calendar">农历</string>
+    <string name="lunar_zheng">正</string>
+    <string name="lunar_yi">一</string>
+    <string name="lunar_er">二</string>
+    <string name="lunar_san">三</string>
+    <string name="lunar_si">四</string>
+    <string name="lunar_wu">五</string>
+    <string name="lunar_liu">六</string>
+    <string name="lunar_qi">七</string>
+    <string name="lunar_ba">八</string>
+    <string name="lunar_jiu">九</string>
+    <string name="lunar_shi">十</string>
+    <string name="lunar_shi_yi">冬</string>
+    <string name="lunar_shi_er">腊</string>
+    <string name="lunar_chu_shi">初十</string>
+    <string name="lunar_er_shi">二十</string>
+    <string name="lunar_san_shi">三十</string>
+    <string name="lunar_chu">初</string>
+    <string name="lunar_leap">闰</string>
+    <string name="lunar_ling">O</string>
+    <string name="lunar_nian">廿</string>
+    <string name="lunar_year">年</string>
+    <string name="lunar_yue">月</string>
+    <string name="reboot_system">Restart telefonu</string>
+    <string name="global_action_screenshot">Screenshot</string>
+    <string name="global_action_toggle_silent_mode">Tichý režim</string>
+    <string name="global_action_screenshot_status">Stiskněte tlačítka napájení a hlasitosti dolů pro screenshot</string>
+    <string name="reboot_reboot">Restart</string>
+    <string name="reboot_recovery">Recovery</string>
+    <string name="reboot_bootloader">Bootloader</string>
+    <string name="reboot_bootmenu">Bootmenu</string>
+    <string name="reboot_fastboot">Rychlý boot</string>
+    <string name="reboot_download">Stahování</string>
+    <string name="reboot_progress">Restartování…</string>
+    <string name="reboot_confirm">Váš telefon bude restartován.</string>
+    <string name="global_action_reboot">Restart</string>
+    <string name="lockscreen_discharging">Baterie (%d%%)</string>
+    <string name="progress_scanning">Hledání</string>
+    <string name="phone_goggles_problem_count">Problém #%1$d:</string>
+    <string name="phone_goggles_description">Solve the %1$d following maths problems in less than %2$d seconds in order to perform your communication.</string>
+    <string name="permlab_revokePermissions">Allows view and edit of revoked permissions. Not for use by normal applications.</string>
+    <string name="permdesc_revokePermissions">Allows read and write for revoked permissions. Not for use by normal applications.</string>
+    <string name="app_killed_message">Aplikace ukončena</string>
+    <string name="back_killed_message">Ukončeno</string>
+    <string name="lock_screen_miss_call">%1$d Zmeškaných hovorů</string>
+    <string name="lock_screen_new_msg">%1$d Nová zpráva</string>
+    <string name="lock_screen_miss_calls">%1$d Zmeškaných hovorů</string>
+    <string name="lock_screen_new_msgs">%1$d Nových zpráv</string>
+    <string name="lock_screen_drag_down">Tahem dolů odemknout</string>
+    <string name="lock_screen_drag_here">Tahem sem odemknout</string>
+    <string name="lock_screen_dismiss">Zrušit</string>
+    <string name="lock_screen_snooze">Odložit</string>
+    <string name="lock_screen_pm">odp</string>
+    <string name="lock_screen_am">dop</string>
+    <string name="fixed_line">Pevná linka</string>
+    <string name="ringtone_custom">Vlastní...</string>
+    <string name="ringtone_silent_summary">Tichý režim</string>
+    <string name="data_usage_warning_body">Upozornění, zbývá pouze %s dat vašeho operátora.</string>
+    <string name="text_pastelist">Clipboard</string>
+    <string name="select">Vybrat</string>
+    <string name="lewa_date_picker_label_day" />
+    <string name="lewa_date_picker_label_month" />
+    <string name="lewa_date_picker_label_year" />
+    <string name="lewa_time_picker_label_hour" />
+    <string name="lewa_time_picker_label_minute" />
+    <string name="inadvertmode_title">Zabránit nechtěné akci</string>
+    <string name="inadvertmode_tip_msg1">Nepřekrývejte vrchní část telefonu</string>
+    <string name="inadvertmode_force_quit">Vynucené ukončení: Stiskněte tlačítka Domů + Hlasitost nahoru</string>
 </resources>
