--- a/main/LewaGallery2.apk/res/values-sk/strings.xml
+++ b/main/LewaGallery2.apk/res/values-sk/strings.xml
@@ -429,14 +429,21 @@
 <string name="no_video">Žiadne video</string>
 <string name="duration_timer_format_with_hour">%1$d:%2$d:%3$d</string>
 <string name="duration_timer_format_without_hour">%1$d:%2$d</string>
-<string name="image">Obrázok</string>
-<string name="video">Video</string>
+<string name="image">Obrázkov</string>
+<string name="photo">Fotiek</string>
+<string name="video">Klipov</string>
 <string name="add_image">Pridať obrázok</string>
 <string name="add_image_success">Pridanie obrázku úspešné</string>
 <string name="not_image_or_video">Žiadny obrázok</string>
 <string name="select_folder">Vybrať zobrazovanie albumov</string>
 <string name="no_storage_or_album_delete">Nenájdaná SD karta alebo vymazaný album</string>
 <string name="picture_move_to_album">Obrázok presunúť do albumu: %s</string>
+<string name="support_by_camera360">Technická podpora od Camera360</string>
+<string name="filter">Filter</string>
+<string name="year_month_format">MMMM yyyy</string>
+<string name="month_day_format">dd MMMM</string>
+<string name="month_format">MMMM</string>
+<string name="day_format">dd</string>
 <string name="audio_not_supported">Zlyhalo prehrávanie zvuku.</string>
 <string name="can_not_trim">Nastala chyba, video nebolo ustrihnuté.</string>
 <string name="settings">Nastavenie</string>
